--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ requests = "^2.31.0"
 beautifulsoup4 = "^4.12.3"
 pyowm="3.3.0"
 openai = "^1.107.2"
+crewai-tools = "^0.71.0"
 
 [tool.pyright]
 # https://github.com/microsoft/pyright/blob/main/docs/configuration.md
